# Examples_Core_Course_1

./: README.md
lesson13_functions/: CMakeLists.txt  main.cpp
lesson14_functionoverloading/: CMakeLists.txt  main.cpp
lesson15_byref_byval/: CMakeLists.txt  main.cpp
lesson18_classes_first/: CMakeLists.txt  animal.cpp  animal.h  main.cpp
lesson19_classes_2/: CMakeLists.txt  laptop.cpp  laptop.h  main.cpp
lesson20_classes_inheritence/: CMakeLists.txt  cars.cpp  cars.h  pegout2008.cpp  pegout2008.h  suvs.cpp  suvs.h
lesson20_inheretence/: CMakeLists.txt  cars.cpp  cars.h  kadjar.cpp  kadjar.h  main.cpp  sports.cpp  sports.h  sportsuv.cpp  sportsuv.h  suv.cpp  suv.h
lesson21_interfaces/: CMakeLists.txt  appliance.cpp  appliance.h  freezer.h  main.cpp  microwave.h  toaster.h
lesson22_override/: CMakeLists.txt  felline.cpp  felline.h  lion.cpp  lion.h  main.cpp
lesson23_Qobject/: CMakeLists.txt
lesson23_scope_UNIX/: CMakeLists.txt  main.cpp
lesson24_scope_UNIX/: CMakeLists.txt  CMakeLists.txt.user.2744283  main.cpp
lesson25_pointers_UNIX/: CMakeLists.txt  CMakeLists.txt.user.2744283  main.cpp
lesson26_managememorypointers_UNIX/: CMakeLists.txt  CMakeLists.txt.user.2744283  main.cpp
lesson27_automaticmemory_UNIX/: CMakeLists.txt  CMakeLists.txt.user.2744283  gdxg.cpp  gdxg.h  main.cpp
lesson28_automemoryQt_UNIX/: CMakeLists.txt  CMakeLists.txt.user.2744283  animal.cpp  animal.h  main.cpp  test.cpp  test.h
lesson29_Qobjectcantcopies_UNIX/: CMakeLists.txt  CMakeLists.txt.user.2744283  main.cpp
lesson30_QDisablecopy_UNIX/: CMakeLists.txt  CMakeLists.txt.user.2744283  main.cpp
lesson31_slotsignals/: CMakeLists.txt  destination.cpp  destination.h  main.cpp  source.cpp
lesson32_signalslot2/: CMakeLists.txt  main.cpp  radio.cpp  radio.h  station.cpp  station.h
lesson36_qproperty/: CMakeLists.txt  main.cpp  test.cpp  test.h  watcher.cpp
lesson37_qtimer/: CMakeLists.txt  main.cpp  test.cpp  test.h
lesson38_connectiontypes/: CMakeLists.txt  dog.cpp  dog.h  main.cpp  owner.cpp  owner.h
lesson39_dynamiccasting/: CMakeLists.txt  animal.cpp  animal.h  car.cpp  car.h  main.cpp  suvcar.cpp  suvcar.h
lesson40_throw_try_catch/: CMakeLists.txt  dataCont.h  main.cpp  readasc.cpp  readasc.h
lesson41_template/: CMakeLists.txt  add.cpp  add.h  main.cpp
lesson42_QObjects_QStrings/: CMakeLists.txt  main.cpp
lesson43_qlist/: CMakeLists.txt  main.cpp
lesson44_QtClasses_QObject/: CMakeLists.txt  cat.cpp  cat.h  dog.cpp  dog.h  main.cpp
lesson45_QtClasses_QIntTypes/: CMakeLists.txt  main.cpp
lesson46_QtClasses_QString/: CMakeLists.txt  main.cpp
lesson46_QtClasses_QtimeQDate/: CMakeLists.txt  main.cpp
lesson48_QtClasses_QByteArray/: CMakeLists.txt  main.cpp
lesson49_QtClasses_QVariant/: CMakeLists.txt  main.cpp
lesson50_QtClasses_QStringList/: CMakeLists.txt  main.cpp
lesson51_QtClasses_QList/: CMakeLists.txt  main.cpp
lesson52_QtClasses_QMap/: CMakeLists.txt  main.cpp  pet.cpp  pet.h
lesson53_Templates_FunctionTemplates/: CMakeLists.txt  main.cpp
lesson54_Templates_ClassTemplate/: CMakeLists.txt  main.cpp  test.h
lesson_1/: CMakeLists.txt  main.cpp
lesson_10_flowcontrol/: CMakeLists.txt  main.cpp
lesson_11_switchcase/: CMakeLists.txt  main.cpp
lesson_12_loops/: CMakeLists.txt  main.cpp
lesson_16_functions_struct/: CMakeLists.txt  main.cpp
lesson_17_return_val/: CMakeLists.txt  main.cpp
lesson_2_struct/: CMakeLists.txt  main.cpp
lesson_3_arrays/: CMakeLists.txt  main.cpp
lesson_4_operands/: CMakeLists.txt  main.cpp
lesson_5_assignment_operators/: CMakeLists.txt  main.cpp
lesson_6_comparison_operators/: CMakeLists.txt  main.cpp
lesson_7_logical_operators/: CMakeLists.txt  main.cpp
lesson_8_iostream/: CMakeLists.txt  main.cpp
lesson_9_qdebuq_VS_cout/: CMakeLists.txt  main.cpp
